tests/baselines/reference/objectLiteralWithNumericPropertyName.errors.txt
==== tests/cases/compiler/objectLiteralWithNumericPropertyName.ts (1 errors) ====
    interface A {
        0: string;
    }
    var x: A = {
        ~
!!! error TS2322: Type '{ 0: number; }' is not assignable to type 'A':
!!! error TS2322:   Types of property '0' are incompatible:
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
        0: 3
    };
    